--- a/EN/assets/css/components/contact-maps.css
+++ b/EN/assets/css/components/contact-maps.css
@@ -161,10 +161,19 @@
     ================= Responsive ====================
     =================================================
 */
-@media (min-width: 1200px) and (max-width: 1400px) {
+
+@media (max-width: 470px) {
     .contact-page .contact-bar {
         padding: 0;
     }
+
+    .contact-bar .addresses .box {
+        padding: 20px 16px 50px;
+        height: 200px;
+    }
+}
+
+@media (min-width: 1200px) and (max-width: 1400px) {
 
     .contact-bar .addresses .box {
         padding: 50px 25px;
@@ -173,7 +182,7 @@
     .contact-bar .addresses .box nav a {
         font: var(--tiny-size-med);
     }
-    
+
     .contact-bar .addresses .box .menu a.active {
         font: var(--tiny-size-bold);
     }
