--- a/EN/assets/css/components/footer.css
+++ b/EN/assets/css/components/footer.css
@@ -218,19 +218,16 @@ footer .social-accounts a img.insta-white {
 @media (max-width: 992px) {
 
     .chatbot {
-        min-width: 32px;
-        height: 32px;
-        padding: 0 8px;
+        min-width: 56px;
+        height: 56px;
+        padding: 0 16px;
+        right: 20px;
         bottom: 27px;
     }
 
     .chatbot span {
         font: var(--small-size-med);
         font-size: 13px;
-    }
-
-    .chatbot img {
-        width: 15px;
     }
 
     footer .main,
