--- a/EN/assets/css/pages/about.css
+++ b/EN/assets/css/pages/about.css
@@ -13,7 +13,7 @@
 }
 
 .accordion .card-header button {
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     padding: 0;
     font: var(--med-a-size-bold);
     color: var(--dark-gray);
@@ -67,6 +67,7 @@
 .accordion>.card .card-body {
     padding: 16px 0 30px;
     font: var(--med-a-size-reg);
+    border-bottom: 1px solid var(--straight-gray);
 }
 
 .list-of-logos {
