--- a/EN/assets/css/pages/home.css
+++ b/EN/assets/css/pages/home.css
@@ -646,6 +646,10 @@
         display: none;
     }
 
+    .download-app .stores a img {
+        width: 135px;
+    }
+
     .download-app .app {
         margin-left: -40px;
         margin-top: 65px;
@@ -754,5 +758,9 @@
         height: 295px;
         background-position: center -68px;
         background-size: 317%;
+    }
+
+    .slider-block.services .slick-track {
+        margin-left: -30px;
     }
 }
