--- a/AR/assets/css/pages/careers.css
+++ b/AR/assets/css/pages/careers.css
@@ -146,5 +146,10 @@
 
     .app-success .window p {
         font: var(--tiny-size-reg);
-        margin-bottom: 24px;   }
+        margin-bottom: 24px;
+    }
+
+    .apply-form.default-form form .group {
+        margin-bottom: 24px;
+    }
 }
