--- a/AR/assets/css/components/header.css
+++ b/AR/assets/css/components/header.css
@@ -785,12 +785,12 @@
 
     .navigation-bar {
         height: 100%;
-        width: 0%;
+        width: 100%;
         position: fixed;
         z-index: 9999;
         overflow: hidden;
         top: 0;
-        right: 0;
+        right: -100%;
         background-color: var(--main-green);
         overflow-x: hidden;
         transition: 0.5s;
