--- a/AR/assets/css/pages/home.css
+++ b/AR/assets/css/pages/home.css
@@ -174,16 +174,34 @@
     border-radius: 50%;
 }
 
+.block .icon img{
+    max-width: 110px;
+}
+
 .block h3 {
     margin-top: 16px;
     font: var(--large-b-size-bold);
     color: var(--darker-text);
     transition: all 0.3s;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
 }
 
 /* Services */
 .slider-block.services .block {
     text-align: center;
+}
+
+.slider-block.services .block h3{
+    text-align: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 
 .slider-block.services .block .service {
@@ -316,6 +334,11 @@
     font-size: calc(var(--standard-size) + 4px);
     line-height: 34px;
     margin-bottom: 8px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 
 .events .block .event .date {
@@ -541,6 +564,11 @@
 
     .home-slider .single-slide .slide-content .title {
         font: var(--med-a-size-bold);
+        overflow : hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
     }
 
     .home-slider .single-slide .slide-content .quote {
@@ -549,6 +577,11 @@
 
     .home-slider .single-slide .slide-content .quote p {
         font: var(--mobile-size-reg);
+        overflow : hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 5;
+        -webkit-box-orient: vertical;
     }
 
     .home-slider .single-slide .slide-content .quote img {
@@ -559,10 +592,20 @@
 
     .home-slider .single-slide .slide-content .quote .person .name {
         font: var(--tiny-size-bold);
+        overflow : hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
+        -webkit-box-orient: vertical;
     }
 
     .home-slider .single-slide .slide-content .quote .person .his-title {
         font: var(--tiny-size-reg);
+        overflow : hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
+        -webkit-box-orient: vertical;
     }
 
     .home-slider .single-slide .slide-content .learn-more {
